<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cadastro de Endereço</string>
    <string name="txt_Titulo">Titulo</string>
    <string name="txt_Rua">Digite o Logradouro (Rua, etc)</string>
    <string name="txt_Numero">Digite o Número</string>
    <string name="txt_CEP">Digite o CEP</string>
    <string name="txt_Cidade">Digite a Cidade</string>
    <string name="btn_Salvar">Salvar</string>
    <string name="btn_voltar">Button</string>
    <string name="button">Button</string>
    <string name="back">VOLTAR</string>
    <string name="endere_o">Endereço</string>

    <string-array name="Estado">
        <item>Selecione o Estado</item>
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espirito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>

</resources>
